# vdm

./: .gitignore  CMakeLists.txt  main.c  makeres.cmd  res.rc  ru.lng
